# sora

./: .gitignore  404.html  README.md  index.html  meson.build  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
bindable/: index.html
configuration/: index.html
docs/: bindable.md  configuration.md  dynamic_content.md  index.md  installation.md  styling.md  widgets.md  window.md
docs/services/: i3.md
installation/: index.html
search/: search_index.json
sora/: app.py  geometry.py  monitor.py  service.py  variable.py  window.py
sora/cmd/: main.py  start.py
sora/config/: config.py  styling.py  utils.py
sora/services/: i3.py
sora/utils/: spawn.py
sora/widgets/: base.py  bind.py  box.py  button.py  centerbox.py  cursor.py  eventbox.py  label.py  revealer.py  slider.py  stack.py
styling/: index.html
test/: test_geometry.py  test_monitor.py
test/widgets/: test_base.py  test_label.py
widgets/: index.html
window/: index.html
